--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,11 @@
    margin-top: -21px;
 }
 
+.button_number_phone {
+   text-decoration: none;
+   color: white;
+}
+
 /* section_four what the people thinks*/
 
 .section_four {
