--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@
    z-index: 8;
    width: 10px;
    height: 10px;
-   top: 32%;
+   top: 28.9%;
    left: 125%;
    transform: rotate(45deg);
 }
@@ -893,6 +893,7 @@
    align-items: center;
    gap: 1.5vw;
    margin-bottom: 4em;
+   cursor: pointer;
 }
 
 .button_elem {
@@ -923,7 +924,122 @@
    transform: rotate(45deg);
 }
 
-/*footer*/
+/* popup */
+
+.popup_bg {
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.8);
+   top: 0;
+   left: 0;
+   z-index: 100;
+
+   display: none;
+}
+
+.popup_bg.active {
+   display: block;
+}
+
+.popup {
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   width: 300px;
+   height: 250px;
+   background-color: #F4F0EC;
+   transform: translate(-50%, -50%);
+   z-index: 101;
+   border-radius: 5px;
+
+   display: none;
+}
+
+.popup.active {
+   display: block;
+}
+
+.popup_close {
+   width: 15px;
+   height: 13px;
+   position: absolute;
+   display: block;
+   left: 88%;
+   top: 7%;
+   cursor: pointer;
+}
+
+.popup_close::after {
+   content: "";
+   display: block;
+   position: relative;
+   width: 17px;
+   height: 2px;
+   background-color: #CDA274;
+   transform: rotate(45deg);
+   top: 2px;
+}
+
+.popup_close::before {
+   content: "";
+   display: block;
+   position: relative;
+   width: 17px;
+   height: 2px;
+   background-color: #CDA274;
+   transform: rotate(-45deg);
+   top: 4px;
+}
+
+.popup_form {
+   margin-top: 7%;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   gap: 10px;
+}
+
+.popup_input {
+   width: 200px;
+   height: 40px;
+   border: #CDA274 solid 0.5px;
+   border-radius: 10px;
+   padding-left: 7px;
+
+   font-family: 'Jost';
+   font-style: normal;
+   font-weight: 400;
+}
+
+.popup_button {
+   background-color: #CDA274;
+   border: #a37a4f solid 0.5px;
+   border-radius: 10px;
+   cursor: pointer;
+}
+
+.popup_button_name {
+   font-size: 12px;
+   padding: 5px 20px;
+   font-family: 'Jost';
+   font-style: normal;
+   font-weight: 200;
+   color: #FFFFFF;
+   text-transform: uppercase;
+}
+
+.content_popup {
+   font-family: 'Jost';
+   font-style: normal;
+   font-weight: 400;
+   color: #4D5053;
+   text-align: center;
+   margin-top: 12%;
+   text-transform: uppercase;
+}
+
+/* footer */
 
 .footer {
    display: grid;
