--- a/css/style.css
+++ b/css/style.css
@@ -568,7 +568,6 @@
    text-align: center;
    color: #292F36;
    margin-bottom: 1.38vw;
-   /*20px*/
 }
 
 .text_sec_six {
@@ -581,7 +580,6 @@
 
 .text_sec_six_two {
    margin-bottom: 0.6vw;
-   /*10px*/
 }
 
 .title_about_sec_six {
@@ -589,7 +587,6 @@
    justify-content: space-between;
    max-width: 590px;
    margin-top: 1.66vw;
-   /*24px*/
 }
 
 .title_project {
@@ -618,7 +615,6 @@
 .container_sec_six_one,
 .container_sec_six_two {
    margin-top: 4.2vw;
-   /*61px*/
 }
 
 .img_project_one,
@@ -630,17 +626,23 @@
    max-width: 590px;
 }
 
-.round_project::before {
-   content: "";
+.round_project {
    display: block;
    position: relative;
+   border-radius: 50%;
+   cursor: pointer;
    width: 70px;
    height: 70px;
    background-color: #F4F0EC;
-   border-radius: 50%;
+   border: #F4F0EC;
+
 }
 
-.round_project::after {
+.round_project:hover {
+   background-color: #E5E1DC;
+}
+
+.round_project::before {
    content: "";
    display: block;
    position: relative;
@@ -649,7 +651,6 @@
    width: 10px;
    height: 10px;
    transform: rotate(45deg);
-   bottom: 40px;
    left: 27px;
 }
 
@@ -664,7 +665,6 @@
    width: 100%;
    margin-top: 9.72vw;
    height: 32.98vw;
-   /*475px*/
 }
 
 .sec_seven_title {
@@ -694,7 +694,6 @@
    position: relative;
    width: 1.5px;
    height: 13.5vw;
-   /*195px*/
    border-right: #CDA274 solid 1.5px;
 }
 
@@ -750,18 +749,23 @@
    color: #4D5053;
 }
 
-.round_button_sec_eight::before {
-   content: "";
+.round_button_sec_eight {
    display: block;
    position: relative;
    width: 52px;
    height: 52px;
    background-color: #F4F0EC;
+   border: #F4F0EC;
    border-radius: 50%;
    z-index: 5;
+   cursor: pointer;
 }
 
-.round_button_sec_eight::after {
+.round_button_sec_eight:hover {
+   background-color: #E5E1DC;
+}
+
+.round_button_sec_eight::before {
    content: "";
    display: block;
    position: relative;
@@ -770,7 +774,7 @@
    width: 8px;
    height: 8px;
    transform: rotate(45deg);
-   margin: -31px 0 0 18.5px;
+   left: 19px;
    z-index: 6;
 }
 
@@ -954,6 +958,22 @@
    border-radius: 5px;
 
    display: none;
+
+
+   animation: from-top 2.5s forwards;
+
+
+
+}
+
+@keyframes from-top {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
 }
 
 .popup.active {
@@ -1010,7 +1030,11 @@
    font-family: 'Jost';
    font-style: normal;
    font-weight: 400;
+
+
 }
+
+
 
 .popup_button {
    background-color: #CDA274;
@@ -1037,6 +1061,50 @@
    text-align: center;
    margin-top: 12%;
    text-transform: uppercase;
+}
+
+.input.error {
+   border-color: red;
+}
+
+.popup_button:hover {
+   background-color: #a37a4f;
+}
+
+.popup-window {
+   background-color: #4D5053;
+   width: 300px;
+   height: 70px;
+   z-index: 200;
+   position: fixed;
+
+   margin: 0;
+   padding: 0;
+   top: 20%;
+   left: 40.5%;
+   border-radius: 10px;
+   font-size: 20px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-transform: uppercase;
+   font-family: 'Jost';
+   letter-spacing: 3px;
+   color: #E7E7E7;
+   opacity: 0;
+
+   animation: ani 2.5s forwards;
+
+}
+
+@keyframes ani {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
 }
 
 /* footer */
